<resources>
    <string name="app_name">MoleMate</string>
    <string name="takePic">Mache ein Foto!</string>
    <string name="toolbarTakePic">Mache ein Foto</string>
    <string name="menuItemTakePic">Screening</string>
    <string name="nav_opening">NavigationDrawer open</string>
    <string name="nav_closing">NavigationDrawer closing</string>
    <string name="home">Home</string>
    <string name="menuItemHealth">Dein Archiv</string>
    <string name="menuItemInformation">Zusätzliche Informationen</string>
    <string name="app_description">Diese App wurde im Rahmen der Masterarbeit von Bastian Kamp geschrieben!</string>
    <string name="toDiagnosis">Starte Diagnose</string>
    <string name="yourDiagnosis">Deine Diagnose</string>
    <string name="back">Zurück</string>
    <string name="save">Speichern</string>
    <string name="buttonBack">Rückseite</string>
    <string name="buttonFront">Vorderseite</string>
    <string name="fragment_saveHeader">Möchtest du die Diagnose speichern?</string>
    <string name="bodyPartHeader">Lage der Hautläsion</string>
    <string name="goOn">Weiter</string>
    <string name="fragment_descrip_body_image">Body for mole position picking</string>
    <string name="fragment_descrip_colored_body_image">Colored Body for mole position picking</string>
    <string name="yourArchive">Dein Archive</string>
    <string name="takeMolePicButtonText">Neue Aufnahme</string>
    <string name="cancerCheckerClass">MoleMate</string>
    <string name="upperBody">Oberkörper</string>
    <string name="head">Kopf</string>
    <string name="arms">Arme</string>
    <string name="legs">Beine</string>
    <string name="password">Passwort</string>
    <string name="passwordRequirements">1 Großbuchstabe, 1 Zahl und min. 8 Zeichen</string>
    <string name="login">Anmelden</string>
    <string name="signIn">Registieren</string>
    <string name="mail">Email</string>
    <string name="error_invalid_email">Die Email Adresse scheint nicht zu stimmen</string>
    <string name="error_field_required">Das Feld ist nicht ausgefüllt!</string>
    <string name="error_mails_not_equals">Die Email Adressen stimmen nicht überein</string>
    <string name="error_invalid_password">Das Passwort entspricht nicht den Vorgaben</string>
    <string name="mail_confirmation">Email (wiederholen)</string>
    <string name="impressum">Impressum</string>
    <string name="logout">Abmelden</string>
    <string name="uv_faktor">4</string>
    <string name="skincnacerTools">Deine persönlichen Hautkrebsvorsorge-Tools</string>
    <string name="uv_index">UV-Index</string>
    <string name="more_information">Weitere Informationen</string>

    <string name="uv_index_low_risk">Bei einem Index zwischen 0-2 sind keine Schutzmaßnahmen erforderlich.</string>
    <string name="uv_index_mid_risk">Bei einem Index zwischen 3-7 sind Schutzmaßnahmen erforderlich.
        Sonnencreme mit ausreichendem Schutzfaktor und halte dich nach Möglichkeit im Schatten auf.
    </string>
    <string name="uv_index_high_risk">Bei einem Index ab 8 sind Schutzmaßnahmen zwingend erforderlich.
        Nutze Sonnencreme mit ausreichendem Schutzfaktor und gehe nach Möglichkleit nicht nach draußen.
    </string>
    <string name="prevention">Vorsorge</string>
    <string name="loadFromPhone">Gallerie</string>
    <string name="newPhoto">Neue Aufnahme</string>
    <string name="error">Da ist wohl ein Fehler aufgetreten, versuche es bitte noch einmal.</string>
    <string name="diagnosis">Diagnose</string>
    <string name="lookInto">Fragwürdig</string>
    <string name="begnin">Gutartig zu</string>
    <string name="diagnosisMalignant">
        Suche bitte bei nächster Gelgenheit einen Hautarzt auf und zeige ihm diese Hautläsion.
        Es besteht die Möglichkeit, dass diese Läsion bösartig ist.
    </string>
    <string name="diagnosisBegnin">
        Diese Läsion ist gutartig. Keine Maßnahmen sind nötig.
        Behalte deine Muttermale aber weiterhin im Blick
    </string>
    <string name="yourMoles">Deine Aufnahmen</string>
    <string name="share">Teile deine Aufnahme</string>
    <string name="sendToDoc">Sende an Arzt</string>
    <string name="takenCareOf">Bereits behandelt</string>
    <string name="delete">Löschen</string>
    <string name="impressumText">
        Diese App wurde im Rahmen meiner Masterarbeit entwickelt.
        Hierbei handelt es sich um einen ersten Prototypen, der sich noch in der Entwicklungsphase befindet.
        Dein Feedback ist eine große Bereicherung für die weitere Entwicklung dieser App. Also bei Fragen oder Anregungen
        betreffend die Entwicklung dieser App, kontaktiere mich bitte unter folgender Mail.

        \n\nEntwickler: Bastian Kamp
    </string>
    <string name="provideFeedback">Feedback/Fragen</string>
    <string name="menuItemPrev">Informationen</string>
    <string name="address">Adresse:\nUniversität Osnabrück \nNeuer Graben\n49074 Osnabrück</string>
    <string name="uv_index_undefined">
        Leider kann der aktuelle UV-Index derzeit nicht geladen werden.
        Klicke unten, um weitere Informationen zum UV-Index zu erhalten.
    </string>
    <string name="preference_file">com.master.molemate.PREFERENCE_FILE</string>
    <string name="personalInfo">Damit wir deine Risikogruppe besser bestimmen können, benötigen wir folgende Informationen:</string>
    <string name="userInfo">Nutzerangaben</string>
    <string name="firstName">Vorname</string>
    <string name="lastName">Nachname</string>
    <string name="zipCode">Postleitzahl</string>
    <string name="age">Dein Alter</string>
    <string name="help">Hilfe!</string>
    <string name="skinTypeHelp"> <b>Hauttyp I:</b> helle Haut mit Sommersprossen, blonde oder rote Haare, grüne oder blaue Augen
        \n\n<b>Hauttyp II:</b> helle Haut, blonde Haare, blaue oder grüne Augen
        \n\n<b>Hauttyp III:</b> leicht getönte, mittelhelle Haut, dunkle Haare, braune Augen
        \n\n<b>Hauttyp IV:</b> Von Natur aus dunkle Haut, schwarze oder dunkle Haare, braune Augen</string>
    <string name="skinType">Hauttyp (1-4)</string>
    <string name="infoUserData">Wir benötigen ein paar persönliche Informationen,
        damit wir deine Risikogruppe besser bestimmen können und
        dir eine optimale Gesundheitsvorsorge zuführen zu können!</string>
    <string name="sendInformation">Daten Abschicken</string>
    <string name="error_invalid">Fehlerhafte Eingabe</string>


</resources>
