<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginProcess.PersonalInformation"
    android:orientation="vertical"
    android:layout_weight="8"
    android:padding="33dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="77dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:src="@drawable/mole_mate_logo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="5dp"
            android:text="@string/userInfo"
            android:textAlignment="center"
            android:layout_gravity="center_vertical"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            />


    </LinearLayout>


    <com.google.android.material.circularreveal.CircularRevealGridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:rowCount="1"
        android:columnCount="2"
        >

        <EditText
            android:id="@+id/firstNameText"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:hint="@string/firstName"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            android:backgroundTint="@color/colorPrimaryDark"
             />

        <EditText
            android:id="@+id/lastNameText"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:ems="10"
            android:hint="@string/lastName"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            android:backgroundTint="@color/colorPrimaryDark"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
             />

    </com.google.android.material.circularreveal.CircularRevealGridLayout>

    <com.google.android.material.circularreveal.CircularRevealGridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:rowCount="1"
        android:columnCount="2"
        >

        <EditText
            android:id="@+id/zipCodeText"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:ems="10"
            android:hint="@string/zipCode"
            android:inputType="number"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            android:backgroundTint="@color/colorPrimaryDark"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"/>

        <EditText
            android:id="@+id/ageText"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:ems="10"
            android:hint="@string/age"
            android:inputType="number"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            android:backgroundTint="@color/colorPrimaryDark"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"/>


    </com.google.android.material.circularreveal.CircularRevealGridLayout>


    <com.google.android.material.circularreveal.CircularRevealGridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:rowCount="1"
        android:columnCount="2"
        >

        <EditText
            android:id="@+id/skinTypeView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:ems="10"
            android:hint="@string/skinType"
            android:inputType="number"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            android:backgroundTint="@color/colorPrimaryDark"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"/>

        <TextView
            android:id="@+id/helpTextView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textSize="18sp"
            android:text="@string/help"
            android:gravity="center_vertical"
            android:textColor="@color/colorPrimaryDark"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"/>

    </com.google.android.material.circularreveal.CircularRevealGridLayout>

    <Button
        android:id="@+id/sendInfoButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/sendInformation"
        android:textColor="@color/btnTextColor"
        android:layout_weight="1" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="17dp"
        android:background="@android:color/transparent"
        android:text="@string/back"
        android:layout_weight="1" />



</LinearLayout>