<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:background="@color/btnTextColor"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/fragment_save_information_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/fragment_saveHeader"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/fragment_save_mole_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fragment_save_information_header"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp" />

        <TextView
            android:id="@+id/fragment_save_diagnosis_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fragment_save_mole_image"
            android:gravity="center"
            android:text="@string/diagnosis"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fragment_save_diagnosis_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fragment_save_diagnosis_header"
            android:layout_margin="5dp"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/fragment_save_mole_pos_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fragment_save_diagnosis_text"
            android:gravity="center"
            android:text="@string/bodyPartHeader"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/fragment_save_mole_pos_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fragment_save_mole_pos_header"
            android:layout_margin="5dp"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_below="@id/fragment_save_mole_pos_image">

            <Button
                android:id="@+id/fragment_save_cancelButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:text="@string/back"
                android:textColor="@color/btnTextColor" />

            <Button
                android:id="@+id/fragment_save_saveButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:text="@string/save"
                android:textColor="@color/btnTextColor" />
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>