<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginProcess.LoginActivity"
   >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="210dp"
        android:layout_height="188dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="53dp"
        android:scaleType="centerInside"
        android:src="@drawable/mole_mate_logo_and_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/mail_login"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:maxHeight="75dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/mail"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/password_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        />

    <EditText
        android:id="@+id/password_login"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="8dp"
        android:maxHeight="75dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mail_login" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:maxHeight="75dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="8dp"
        android:text="@string/login"
        android:background="@color/buttonColor"
        android:textColor="@color/btnTextColor"
        app:layout_constraintBottom_toTopOf="@+id/registrationButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_login" />

    <Button
        android:id="@+id/registrationButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="70dp"
        android:background="@android:color/transparent"
        android:maxHeight="75dp"
        android:text="@string/signIn"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />


</androidx.constraintlayout.widget.ConstraintLayout>