<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:id="@+id/drawerLayout"
        tools:context=".Impressum.Impressum">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="9"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="12dp"
                    android:src="@drawable/mole_mate_logo_and_name"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:text="@string/impressum"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:layout_gravity="center_vertical"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:textSize="12sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/impressumText"
                    android:layout_gravity="center_vertical"/>
                
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/address"/>

                <Button
                    android:id="@+id/impressum_sendMailButton"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:layout_gravity="center_vertical"
                    android:background="@color/colorPrimaryDark"
                    android:textColor="@color/btnTextColor"
                    android:text="@string/provideFeedback"
                    />


            </LinearLayout>
        </LinearLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/mainMenu"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:headerLayout="@layout/main_menu_header"
            app:menu="@menu/drawer_main_menu" />

</androidx.drawerlayout.widget.DrawerLayout>

